src/objects/AIA_Implementation__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Implementations</relationshipLabel>
        <relationshipName>Implementations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit_Request_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Request Form</label>
        <referenceTo>Benfit_Request_Form__c</referenceTo>
        <relationshipLabel>Implementations</relationshipLabel>
        <relationshipName>Implementations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Generate_Workplan_Stages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generate Workplan Stages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementation_Plan_Timeline_Days__c</fullName>
        <label>Implementation Plan Timeline (Days)</label>
        <picklist>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>180</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>AIA_Post_Sales_Implementation</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In-Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Structure_s_Level_of_Complexity__c</fullName>
        <description>Structure&apos;s Level of Complexity</description>
        <label>Structure&apos;s Level of Complexity</label>
        <picklist>
            <picklistValues>
                <fullName>Simple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Complex</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Workplan_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workplan Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AIA_Workplan_Type__c.Used_For__c</field>
                <operation>equals</operation>
                <value>Implementation</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AIA_Workplan_Type__c</referenceTo>
        <relationshipLabel>Implementations</relationshipLabel>
        <relationshipName>Implementations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Implementation</label>
    <listViews>
        <fullName>AIA_Implementation_Queue_AIA_Post_Sales_Implementation</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Workplan_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Queue</filterScope>
        <label>AIA Implementation Queue</label>
        <queue>AIA_Implementation_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Name__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Workplan_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IMP-{000000}</displayFormat>
        <label>Implementation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Implementations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>